--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			</div>
 			<div id="content">
 				<div id="content-left">
-					<span><strong>Heatmap Control</strong><br><i>Size by...</i></span>
+					<span><strong>Change how heatmap boxes are sized</strong><br><i>Size by...</i></span>
                     <select id="heatmapControl">
                         <option value="total_documents">Total Volume</option>
                         <option value="detractor_documents">Detractor Volume</option>
@@ -30,7 +30,7 @@
                     <br>
                     <span><i>Color by...</i> <br>average overall sentiment</span>
                     <br><br><br>
-					<strong>Bar Chart Control</strong>
+					<strong>Change the chart on the bottom left</strong>
 					<br><br>
 					<input id="detractorDesc" type="radio" name="sort" value="detractorDesc" checked><span> Sort detractors</span>
 					<br>
@@ -42,7 +42,7 @@
 					<br><br>
 					<input id="labelToggle" type="checkbox"><span>Show Labels</span><br><br>
 					<br><br>
-					<span><strong>Bubble Control</strong></span>
+					<span><strong>Split out the groups on the bottom right</strong></span>
 					<br><br>
 					<div id="view_selection" class="btn-group">
                         <a href="#" id="all" class="btn active">Group</a>
