minor updates to consolidated view

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<body>
 		<div id="header"></div>
 		<div id="wrapper">
-			<div id="chord_tooltip" style="visibility: hidden; top: 32px; left: 356px;"></div>
+			<div id="chord_tooltip" class="tooltip" style="visibility: hidden; top: 32px; left: 356px;"></div>
 			<div id="content-box1">
 				<span class="chartTitle">Understand customer discussion by OSAT</span>
 			</div>
