fixed back in headers to be more compatible with data set

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 		<div id="wrapper">
 			<div id="chord_tooltip" class="tooltip" style="visibility: hidden; top: 32px; left: 356px;"></div>
 			<div id="content-box1">
-				<span class="chartTitle">Understand customer discussion by OSAT</span>
+				<span class="chartTitle">Understand how the discussion of different topics effects OSAT</span>
 			</div>
 			<div id="content-box2">
-				<span class="chartTitle">Determine how topics drive satisfaction (size based on topic influence)</span>
+				<span class="chartTitle">Statistically determine how topics drive satisfaction (size based on influence, not volume)</span>
 			</div>
 
 			<div id="content">
@@ -34,7 +34,7 @@
                     <br>
                     <span><i>Color by...</i> <br>average overall sentiment</span>
                     <br><br><br>
-					<strong>Change the chart on the bottom left</strong>
+					<strong>Sort or label the chart on the bottom left</strong>
 					<br><br>
 					<input id="detractorDesc" type="radio" name="sort" value="detractorDesc" checked><span> Sort detractors</span>
 					<br>
@@ -57,10 +57,10 @@
                     <br>
 				</div>
 				<div id="content-main">
-					<span class="chartTitle">Click on heatmap to navigate and zoom in on the voice of the customer</span>
+					<span class="chartTitle">This heatmap shows average sentiment across discussion topics.  Click on heatmap to navigate and zoom in on the voice of the customer</span>
 				</div>
 				<div id="content-box3">
-					<span class="chartTitle">Investigate the relationships between store departments and what's said about them</span>
+					<span class="chartTitle">Understand the co-occurring discussions:  When customers talk about a given topic, what else are they talking about and what kind of sentiment are they using?</span>
 				</div>
 			</div>
 			<div id="footer">
