--- a/bulletsample.html
+++ b/bulletsample.html
@@ -30,7 +30,7 @@ button {
 </style>
 <button>Update</button>
 <script src="http://d3js.org/d3.v3.min.js"></script>
-<script src="bullet.js"></script>
+<script src="./js/bullet.js"></script>
 <script>
 
 var margin = {top: 5, right: 40, bottom: 20, left: 180},
