--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8">
         <title>category influence</title>
         <!--<link rel="stylesheet" href="/css/bootstrap.min.css">-->
-        <link rel="stylesheet" href="/css/styles2.css">
-        <script type="text/javascript" src="/d3/d3.v3.min.js"></script>
-        <script type="text/javascript" src="/jquery/jquery-2.0.3.min.js"></script>
-        <script type="text/javascript" src="/js/underscore.js"></script>
-  		<script type="text/javascript" src="/js/mapper.js"></script>
+        <link rel="stylesheet" href="./css/styles2.css">
+        <script type="text/javascript" src="./d3/d3.v3.min.js"></script>
+        <script type="text/javascript" src="./jquery/jquery-2.0.3.min.js"></script>
+        <script type="text/javascript" src="./js/underscore.js"></script>
+  		<script type="text/javascript" src="./js/mapper.js"></script>
     </head>
 	<body>
 		<div id="header"></div>
@@ -64,10 +64,10 @@
 				</div>
 			</div>
 			<div id="footer">
-				<img src="/images/cb_footer.jpg" width="50" height="26" alt="CB Logo">
+				<img src="./images/cb_footer.jpg" width="50" height="26" alt="CB Logo">
 			</div>
 			<div id="bottom"></div>
 		</div>
 	</body>
-	<script type="text/javascript" src="/js/npsbycategory_divlayout.js"></script>
+	<script type="text/javascript" src="./js/npsbycategory_divlayout.js"></script>
 </html>
