--- a/bulletsample.html
+++ b/bulletsample.html
@@ -29,7 +29,7 @@ button {
 
 </style>
 <button>Update</button>
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="./js/bullet.js"></script>
 <script>
 
