--- a/bulletsample.html
+++ b/bulletsample.html
@@ -30,7 +30,7 @@ button {
 </style>
 <button>Update</button>
 <script src="https://d3js.org/d3.v3.min.js"></script>
-<script src="../js/bullet.js"></script>
+<script src="js/bullet.js"></script>
 <script>
 
 var margin = {top: 5, right: 40, bottom: 20, left: 180},
@@ -41,7 +41,7 @@ var chart = d3.bullet()
     .width(width)
     .height(height);
 
-d3.json("../data/bullets.json", function(error, data) {
+d3.json("data/bullets.json", function(error, data) {
   var svg = d3.select("body").selectAll("svg")
       .data(data)
     .enter().append("svg")
